--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "power-components/livewire-powergrid": "^3.0",
+        "psr/simple-cache": "^1.0",
         "realrashid/sweet-alert": "^5.1"
     },
     "require-dev": {
